--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
     "react-to-print": "^3.0.2",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.14.4"
