--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-pdf/renderer": "^4.0.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "express": "^4.21.1",
     "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "jspdf": "^2.5.2",
