--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,39 +1,21 @@
+# Node.js with React
+# Build a Node.js project that uses React.
+# Add steps that analyze code, save build artifacts, deploy, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
+
 trigger:
 - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: ubuntu-latest
 
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '14.x'
+    versionSpec: '20.x'
   displayName: 'Install Node.js'
 
 - script: |
     npm install
     npm run build
-  displayName: 'Npm install and build'
-
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(System.DefaultWorkingDirectory)/build'
-    includeRootFolder: false
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
-  displayName: 'Archive build output'
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    ArtifactName: 'drop'
-  displayName: 'Publish build artifacts'
-
-- task: AzureWebApp@1
-  inputs:
-    azureSubscription: '<Your Azure Subscription>'
-    appType: 'webApp'
-    appName: 'sgmmodernbricks' # Your App Service Name
-    package: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-  displayName: 'Deploy to Azure Web App'
+  displayName: 'npm install and build'
