--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "jspdf": "^2.5.2",
     "mysql2": "^3.11.4",
+    "passport": "^0.7.0",
+    "passport-saml": "^3.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
